--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     },
     "devDependencies": {
         "@types/node": "^22.13.13",
+        "@types/react": "^19.0.12",
+        "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.3",
         "typescript": "^5.8.2",
-        "vite": "^6.2.3"
+        "vite": "^6.2.3",
+        "classnames": "^2.5.1"
     },
     "peerDependencies": {
         "react": "^18.x.x"
@@ -24,9 +27,7 @@
     "files": [
         "build"
     ],
-    "main": "./build/index.js",
+    "main": "./build/structure_editor.umd.js",
     "dependencies": {
-        "@types/react": "^19.0.12",
-        "@types/react-dom": "^19.0.4"
     }
 }
