--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "classnames": "^2.5.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "ts-node": "^10.9.2",
         "tsx": "^4.19.3",
         "typescript": "^5.8.2",
         "vite": "^6.2.3",
-        "classnames": "^2.5.1"
+        "vite-plugin-dts": "^4.5.3"
     },
     "peerDependencies": {
         "react": "^18.x.x"
     },
     "files": [
-        "build"
+        "dist"
     ],
-    "main": "./build/structure_editor.umd.js",
+    "main": "./dist/structure_editor.umd.js",
     "dependencies": {
     }
 }
