--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "tsx": "^4.19.3",
         "typescript": "^5.8.2",
         "vite": "^6.2.3",
-        "vite-plugin-dts": "^4.5.3"
+        "vite-plugin-dts": "^4.5.3",
+        "uuid": "^11.1.0"
     },
     "peerDependencies": {
         "react": "^18.x.x"
